script to turn off cameras

--- a/scripts.yaml
+++ b/scripts.yaml
@@ -68,3 +68,10 @@ turn_on_cameras:
       entity_id: switch.neo_coolcam_power_plug_12a_switch_2    
     - service: input_boolean.turn_on
       entity_id: input_boolean.camera_sejour_state
+turn_off_cameras:
+  alias: Eteindre caméras
+  sequence:
+    - service: switch.turn_off
+      entity_id: switch.neo_coolcam_power_plug_12a_switch_2    
+    - service: input_boolean.turn_off
+      entity_id: input_boolean.camera_sejour_state
