chore(automation): turn on light on coming home

--- a/automations.yaml
+++ b/automations.yaml
@@ -207,6 +207,7 @@
       to: 'off'
   action:
     - service: script.turn_off_cameras
+    - service: script.turn_on_light_when_coming_home
     - service: notify.html5
       data:
         title: "{{ states.input_text.notifications_generic_title.state }}"
