--- a/scripts.yaml
+++ b/scripts.yaml
@@ -86,3 +86,14 @@ notify_marc_roads:
         message: "SII: {{ states.sensor.sii_roads.state }}\nOF: {{ states.sensor.ouest_france_roads.state }}"
         data:
           url: /mobility
+
+turn_on_light_when_coming_home:
+  alias: Allume les lumières en rentrant
+  sequence:
+    - condition: state
+      entity_id: cover.fibaro_system_fgrm222_roller_shutter_controller_2_level
+      state: 'close'
+    - service: ligth.turn_on
+      entity_id: light.spots_led
+    - service: switch.turn_on
+      entity_id: switch.neo_coolcam_power_plug_12a_switch_3
