--- a/configuration.yaml
+++ b/configuration.yaml
@@ -53,7 +53,7 @@ device_tracker:
     new_device_defaults:
       track_new_devices: false
       hide_if_away: true
-  - platform: bluetooth_le_tracker
+  - platform: ble_tracker
     track_new_devices: true
 
 # Allows you to issue voice commands from the frontend in enabled browsers
@@ -185,6 +185,10 @@ zwave:
 binary_sensor:
   - platform: workday
     country: FRA
+  - platform: bayesian
+    prior: 0.5
+    observations:
+      - 
 
 panel_iframe:
   terminal:
