--- a/automations.yaml
+++ b/automations.yaml
@@ -195,8 +195,7 @@
         title: "{{ states.input_text.notifications_generic_title.state }}"
         message: "{{ states.input_text.notifications_message_away_mode_on.state }}"
     - service: script.turn_on_cameras
-    - service: homeassistant.turn_off
-      entity_id: group.all_lights
+    - service: script.turn_off_all_lights
 
 - id: away_mode_deactivate
   alias: Absence désactivée
