chore(script): use data template for cover position

--- a/scripts.yaml
+++ b/scripts.yaml
@@ -16,7 +16,7 @@ positionner_volets:
   alias: Positionner les volets
   sequence:
     - service: cover.set_cover_position
-      data:
+      data_template:
         entity_id: group.all_covers
         position: "{{ position }}"
 
