--- a/configuration.yaml
+++ b/configuration.yaml
@@ -185,6 +185,19 @@ zwave:
 binary_sensor:
   - platform: workday
     country: FRA
+  - platform: bayesian
+    prior: 0.4
+    probability_threshold: 0.95
+    observations:
+      - entity_id: 'input_boolean.force_away_mode'
+        prob_given_true: 1.0
+        platform: 'state'
+        to_state: 'on'
+      - entity_id: 'device_tracker.amazfit_bip_marc'
+        prob_given_true: 0.8
+        platform: 'state'
+        to_state: 'home'
+
 
 panel_iframe:
   terminal:
