chore(cover): add cover

--- a/customize.yaml
+++ b/customize.yaml
@@ -46,6 +46,8 @@ cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_7:
   friendly_name: Pano salon
 cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_8:
   friendly_name: Bureau
+cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_9:
+  friendly_name: Chambre Martin
 
 # Sensors
 sensor.fibaro_system_fgms001_motion_sensor_temperature:
