--- a/lovelace/ui-settings.yaml
+++ b/lovelace/ui-settings.yaml
@@ -1,3 +1,12 @@
+- title: Modes
+  type: entities
+  entities:
+    - input_boolean.night_mode
+    - input_boolean.away_mode
+    - input_boolean.cover_mode
+    - input_boolean.holiday_mode
+    - input_boolean.notifications
+
 - title: Prix
   type: entities
   entities:
