--- a/lovelace/ui-weather.yaml
+++ b/lovelace/ui-weather.yaml
@@ -1,3 +1,10 @@
+- type: entities
+  title: Températures
+  entities:
+    - sensor.fibaro_system_fgms001_motion_sensor_temperature
+    - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
+    - sensor.dark_sky_apparent_temperature
+
 - type: weather-forecast
   entity: weather.dark_sky
 
