--- a/lovelace/ui-media.yaml
+++ b/lovelace/ui-media.yaml
@@ -1,4 +1,4 @@
 - type: media-control
   entity: media_player.salon
-- type: media-control
-  entity: media_player.chromecast_chambre
+# - type: media-control
+#   entity: media_player.chromecast_chambre
