--- a/automations.yaml
+++ b/automations.yaml
@@ -4,12 +4,7 @@
   - event: sunset
     platform: sun  
   action:
-    - delay: "00:{% if states.sensor.dark_sky_cloud_coverage.state|int > states.input_number.cloud_treshold.state|int %}10{% else %}20{% endif %}"
-    - condition: state
-      entity_id: input_boolean.cover_mode
-      state: 'on'
-    - entity_id: group.all_covers
-      service: cover.close_cover
+    - service: script.fermeture_volets_nuit
 
 - id: veilleuse
   alias: Veilleuse
