--- a/automations.yaml
+++ b/automations.yaml
@@ -106,7 +106,7 @@
   alias: Retour
   trigger:   
      platform: template
-     value_template: "{{ (is_state('binary_sensor.prob_presence_mode', 'on') or is_state('input_boolean.force_presence', 'off')) and is_state('input_boolean.force_away', 'off') }}"
+     value_template: "{{ (is_state('binary_sensor.prob_presence_mode', 'on') or is_state('input_boolean.force_presence', 'on')) and is_state('input_boolean.force_away', 'off') }}"
   action:
     - service: input_boolean.turn_off
       data:
