--- a/configuration.yaml
+++ b/configuration.yaml
@@ -125,6 +125,8 @@ logbook:
       - switch.prise_garage
       - binary_sensor.prob_presence_mode
 
+system_health:
+
 # Enables a map showing the location of tracked devices
 map:
 
