add current memory & processor use

--- a/lovelace/ui-monitoring.yaml
+++ b/lovelace/ui-monitoring.yaml
@@ -47,6 +47,8 @@
         - type: entities
           entities:
             - sensor.disk_use_percent
+            - sensor.memory_use_percent
+            - sensor.processor_use
         - type: history-graph
           entities:
             - sensor.processor_use
