--- a/configuration.yaml
+++ b/configuration.yaml
@@ -147,7 +147,8 @@ cast:
 
 # Text to speech
 tts:
-  - platform: google
+  - platform: google_translate
+    service_name: google_say
 
 # Cloud
 cloud:
