--- a/scripts.yaml
+++ b/scripts.yaml
@@ -27,9 +27,9 @@ fermeture_volets_nuit:
     - condition: state
       entity_id: input_boolean.cover_mode
       state: 'on'
-    - service: notify.html5
-      data:
-        title: "{{ states.input_text.notifications_generic_title.state }}"
+    - service: script.notify
+      data_template:
+        #title: "{{ states.input_text.notifications_generic_title.state }}"
         message: "Les volets vont se fermer" 
     - delay: 00:00:30 
     - service: script.fermeture_volets
@@ -62,9 +62,9 @@ turn_off_tv:
 notify_car_charging:
   alias: notifier chargement de la voiture
   sequence:
-  - service: notify.html5
-    data:
-      title: "{{ states.input_text.notifications_generic_title.state }}"
+  - service: script.notify
+    data_template:
+      #title: "{{ states.input_text.notifications_generic_title.state }}"
       message: "Voiture en charge : {{states.sensor.charge_estimated_time_hour.state }}h"
 
 notify_car_charged:
@@ -72,7 +72,7 @@ notify_car_charged:
   sequence:
   - service: script.notify
     data_template:
-      title: "{{ states.input_text.notifications_generic_title.state }}"
+      #title: "{{ states.input_text.notifications_generic_title.state }}"
       message: "Voiture chargée en : {{states.sensor.day_car_charge.attributes.value }}"
 
 turn_on_cameras:
@@ -96,7 +96,7 @@ notify_marc_roads:
   sequence:
     - service: script.notify
       data_template:
-        title: "Itinéraires"
+        # title: "Itinéraires"
         message: "SII: {{ states.sensor.sii_roads.state }}\nOF: {{ states.sensor.ouest_france_roads.state }}"
 
 turn_on_light_if_cover_closed:
@@ -141,5 +141,5 @@ test_notify:
   sequence:
     service: script.notify
     data_template:
-      title: "TEST"
+      #title: "TEST"
       message: "Ceci est un test :construction_worker:"
