--- a/sensor.yaml
+++ b/sensor.yaml
@@ -6,9 +6,9 @@
     - type: processor_use
     - type: load_15m
 
-- platform: broadlink_power
-  host: 192.168.0.25
-  mac: '34:EA:34:9D:27:5C'
+# - platform: broadlink_power
+#   host: 192.168.0.25
+#   mac: '34:EA:34:9D:27:5C'
 
 - platform: template
   sensors:
