--- a/groups.yaml
+++ b/groups.yaml
@@ -82,7 +82,7 @@ car_switch:
   name: Energie
   entities:
     - switch.prise_garage
-    - sensor.broadlink_spx_power_sensor
+    - sensor.power_prise_garage
     - sensor.value_day_car_charge
     - sensor.price_day_car_charge
 
