--- a/sensor.yaml
+++ b/sensor.yaml
@@ -12,6 +12,7 @@
       entity_id: switch.prise_garage
       icon_template: mdi:power-plug
       value_template: "{{ states.switch.prise_garage.attributes.current_power_w|default(0)|float }}"
+      unit_of_measurement: W
     ## CAR CHARGE
     value_day_car_charge:
       entity_id: sensor.day_car_charge
