--- a/automations.yaml
+++ b/automations.yaml
@@ -395,7 +395,7 @@
     platform: template
     value_template: "{{ (states.sensor.fibaro_system_fgms001_motion_sensor_temperature.state|float) <= (states.input_number.low_alert_temperature.state|float) }}"
   action:
-    - service: notify.notify_low_temperature
+    - service: script.notify_low_temperature
 
 - id: high_temperature_alert
   alias: Alerte haute température
@@ -403,4 +403,4 @@
     platform: template
     value_template: "{{ (states.sensor.fibaro_system_fgms001_motion_sensor_temperature.state|float) >= (states.input_number.high_alert_temperature.state|float) }}"
   action:
-    - service: notify.notify_high_temperature
+    - service: script.notify_high_temperature
