--- a/scripts.yaml
+++ b/scripts.yaml
@@ -141,7 +141,7 @@ notify_high_temperature:
   sequence:
     - service: script.notify
       data_template:
-        title: ":sunny: Alerte de température"
+        title: ":sunny: Il commence à faire chaud dans la maison"
         criticity: "warning"
         message: "La température du RDC est de {{states.sensor.fibaro_system_fgms001_motion_sensor_temperature.state}}°C"
 
@@ -150,7 +150,7 @@ notify_low_temperature:
   sequence:
     - service: script.notify
       data_template:
-        title: ":snowflake: Alerte de température"
+        title: ":snowflake: Ca se rafraîchit par ici"
         criticity: "warning"
         message: "La température du RDC est de {{states.sensor.fibaro_system_fgms001_motion_sensor_temperature.state}}°C"
 
